--- a/app_famortiza/package.json
+++ b/app_famortiza/package.json
@@ -23,6 +23,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "primeicons": "^6.0.1",
+    "primeng": "^16.7.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
